Experimental Dynamic Linking

--- a/aws-lc-fips-sys/CMakeLists.txt
+++ b/aws-lc-fips-sys/CMakeLists.txt
@@ -15,12 +15,19 @@ function(set_my_target_properties ...)
     endif()
 endfunction()
 
+if (BUILD_SHARED_LIBS AND FIPS)
+    # FIPS_SHARED does not support unique function or data sections, but we can't set this from Rust
+    # as cmake crate will postfix the C/CXX flags after out disablement nullifying them.
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-function-sections -fno-data-sections")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-function-sections -fno-data-sections")
+endif ()
+
 add_subdirectory(aws-lc aws-lc EXCLUDE_FROM_ALL)
 if (BUILD_LIBSSL)
     add_definitions(-DAWS_LC_RUST_INCLUDE_SSL)
 endif()
 
-add_library(rust_wrapper STATIC rust_wrapper.c)
+add_library(rust_wrapper rust_wrapper.c)
 target_include_directories(rust_wrapper PRIVATE include)
 target_link_libraries(rust_wrapper PUBLIC crypto)
 if (BUILD_LIBSSL)
