--- a/aws-lc-sys/CMakeLists.txt
+++ b/aws-lc-sys/CMakeLists.txt
@@ -20,7 +20,7 @@ add_subdirectory(aws-lc aws-lc EXCLUDE_FROM_ALL)
 if (BUILD_LIBSSL)
     add_definitions(-DAWS_LC_RUST_INCLUDE_SSL)
 endif()
-add_library(rust_wrapper STATIC rust_wrapper.c)
+add_library(rust_wrapper rust_wrapper.c)
 target_include_directories(rust_wrapper PRIVATE include)
 target_link_libraries(rust_wrapper PUBLIC crypto)
 if (BUILD_LIBSSL)
