--- a/aws-lc-sys/Cargo.toml
+++ b/aws-lc-sys/Cargo.toml
@@ -46,6 +46,7 @@ build = "builder/main.rs"
 asan = []
 ssl = []
 bindgen = ["dep:bindgen"] # Generate the bindings on the targetted platform as a fallback mechanism.
+dynamic = []
 
 [build-dependencies]
 cmake = "0.1.48"
